2010-05-27  Andreas Kupries  <andreask@activestate.com>

	* lib/ttrace.tcl: Resynchronized version number with Thread.

2010-05-26  Andreas Kupries  <andreask@activestate.com>

	* generic/threadSpCmd.c (ThreadMutexObjCmd, ThreadRWMutexObjCmd):
	[Bug 3007426]: Dropped trailing commas in enum definitions which
	choked the strictly C89 AIX compiler.

2010-04-01 Zoran Vasiljevic <zv@archiware.com>

        * generic/tclXkeylist.c: Removed declaration of
	global TclX keylist commands.

2010-03-30 Zoran Vasiljevic <zv@archiware.com>

	*** 2.6.6 TAGGED FOR RELEASE (thread-2-6-6) ***

	* configure               Redo for TEA 3.7
	* configure.in

	* generic/tclThread.h     Cosmetic changes for the inclusion
	* generic/threadCmd.c     in standard Tcl distribution.
	* generic/threadPoolCmd.c
	* generic/threadSpCmd.c
	* generic/threadSvCmd.c
	* generic/threadSvCmd.h

2010-03-19   Jan Nijtmans <nijtmans@users.sourceforge.net>
	
        * generic/threadSpCmd.c    Silence gcc warning: dereferencing type-punned
        * .cvsignore               pointer will break strict-aliasing rules
        * configure                Regenerated using latest TEA

2009-08-19 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: Implemented [tpool::suspend]
	* doc/tpool.man:           and [tpool::resume] commands
	                           as per RFE #2835615.
	                           Also fixed Bug #2833864.
 
2009-07-22   Jan Nijtmans <nijtmans@users.sourceforge.net>
	
	* generic/tclThread.h:   Remove unnecessary ';'s
	* generic/tclXkeylist.c: Constify remaining of thread extension,
	* generic/tclXkeylist.h: bringing it at the same level as Tcl 8.6
	* generic/threadCmd.c
	* generic/threadPoolCmd.c
	* generic/threadSpCmd.c
	* generic/threadSvCmd.c
	* generic/threadSvCmd.h
	* generic/threadSvKeylistCmd.c
	* generic/threadSvKeylistCmd.h
	* generic/threadSvListCmd.c
	
2009-07-16   Alexandre Ferrieux <ferrieux@sourceforge.net>
	